--- a/foundation/rock_paper_scissors/index.html
+++ b/foundation/rock_paper_scissors/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="scripts.js"></script>
-    <title></title>
+    <title>Rock Paper Scissor</title>
   </head>
   <body>
     <header></header>
